Changes for 1.0alpha10:

 - fixed double appearing of complex triggers in list of triggers
 - added form for changing host details
 - All calculations are made in C code instead of SQL statements
 - Housekeping now runs as separate process, however it's part of zabix_suckerd
 - "Not monitored" will not be displayed
 - Calls to mhash() changed to md5(), thus eliminating use of mhash module.
 - Added missing line in zabbix_suckerd. Now it reads items.snmp_oid from DB.

Changes for 1.0alpha9:

 - zabbix_suckerd fixed to listen on interfaces other than 127.0.0.1
 - Fixed nasty bug in DB structure. One of indexes of table functions was incorrectly defined as unique.
 - added patches to upgrades/dbpatches/1.0alpha8_to_1.0alpha9
 - Added status line to all PHP forms (like, "[Host added]")

Changes for 1.0alpha8:

 - changed type of actions.message and alerts.message to blob(text)
 - added new parameters: io[disk_*]
 - zabbix_sucker renamed to zabbix_suckerd
 - new high performance zabbix_agentd
 - connect using IP address became possible
 - new columns - useip,ip were added to table hosts
 - added bin/
 - removed src/.../acconfig.h
 - removed src/.../configure.in
 - added Makefile.in,acconfig.h,configure.in
 - added src/zabbix_sucker/acconfig.h and src/zabbix_trapper/acconfig.h
 - parameters net[listen_??] will use /proc filesystem
 - parameter system[proccount] uses call to sysinfo() function
 - removed calls to command strip from all Makefile.in
 - passwords are not stored in plain text. MD5 is used.
 - zabbix_agent can be tested by defining macro TEST
 - added index (triggerid,clock) for table alarms
 - status of triggers will not be shown for disabled and not-supported parameters
 - fixed availability report
 - optimization of chart.html
 - added trend.html
 - added trends.html
 - improved performance of network map
 - added column icon to table sysmaps_hosts
 - added images Hub.png, Notebook.png, Printer.png, Router.png, Server.png, host.png