@@ -1,3 +1,27 @@
+/* Define if structure sysinfo has bufferram */
+#undef HAVE_SYSINFO_BUFFERRAM
+
+/* Define if structure sysinfo has procs */
+#undef HAVE_SYSINFO_PROCS
+
+/* Define if structure sysinfo has uptime */
+#undef HAVE_SYSINFO_UPTIME
+
+/* Define if structure sysinfo has bufferram */
+#undef HAVE_SYSINFO_FREERAM
+
+/* Define if structure sysinfo has sharedram */
+#undef HAVE_SYSINFO_SHAREDRAM
+
+/* Define if structure sysinfo has totalram */
+#undef HAVE_SYSINFO_TOTALRAM
+
+/* Define if structure sysinfo has totalswap */
+#undef HAVE_SYSINFO_TOTALSWAP
+
+/* Define if structure sysinfo has freeswap */
+#undef HAVE_SYSINFO_FREESWAP
+
 /* Define if you want to use MySQL */
 #undef HAVE_MYSQL
 
