@@ -20,8 +20,89 @@ dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_PID_T
 
+dnl Check for freeswap in struct sysinfo
+AC_MSG_CHECKING(for freeswap in struct sysinfo)
+AC_TRY_COMPILE([#include <sys/sysinfo.h>],
+[struct sysinfo sysinfo;
+sysinfo.freeswap=0;
+],
+AC_DEFINE(HAVE_SYSINFO_FREESWAP)
+AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
+dnl Check for totalswap in struct sysinfo
+AC_MSG_CHECKING(for totalswap in struct sysinfo)
+AC_TRY_COMPILE([#include <sys/sysinfo.h>],
+[struct sysinfo sysinfo;
+sysinfo.totalswap=0;
+],
+AC_DEFINE(HAVE_SYSINFO_TOTALSWAP)
+AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
+dnl Check for totalram in struct sysinfo
+AC_MSG_CHECKING(for totalram in struct sysinfo)
+AC_TRY_COMPILE([#include <sys/sysinfo.h>],
+[struct sysinfo sysinfo;
+sysinfo.totalram=0;
+],
+AC_DEFINE(HAVE_SYSINFO_TOTALRAM)
+AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
+dnl Check for sharedram in struct sysinfo
+AC_MSG_CHECKING(for sharedram in struct sysinfo)
+AC_TRY_COMPILE([#include <sys/sysinfo.h>],
+[struct sysinfo sysinfo;
+sysinfo.sharedram=0;
+],
+AC_DEFINE(HAVE_SYSINFO_SHAREDRAM)
+AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
+dnl Check for bufferram in struct sysinfo
+AC_MSG_CHECKING(for bufferram in struct sysinfo)
+AC_TRY_COMPILE([#include <sys/sysinfo.h>],
+[struct sysinfo sysinfo;
+sysinfo.bufferram=0;
+],
+AC_DEFINE(HAVE_SYSINFO_BUFFERRAM)
+AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
+dnl Check for freeram in struct sysinfo
+AC_MSG_CHECKING(for freeram in struct sysinfo)
+AC_TRY_COMPILE([#include <sys/sysinfo.h>],
+[struct sysinfo sysinfo;
+sysinfo.freeram=0;
+],
+AC_DEFINE(HAVE_SYSINFO_FREERAM)
+AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
+dnl Check for uptime in struct sysinfo
+AC_MSG_CHECKING(for uptime in struct sysinfo)
+AC_TRY_COMPILE([#include <sys/sysinfo.h>],
+[struct sysinfo sysinfo;
+sysinfo.uptime=0;
+],
+AC_DEFINE(HAVE_SYSINFO_UPTIME)
+AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
+dnl Check for procs in struct sysinfo
+AC_MSG_CHECKING(for procs in struct sysinfo)
+AC_TRY_COMPILE([#include <sys/sysinfo.h>],
+[struct sysinfo sysinfo;
+sysinfo.procs=0;
+],
+AC_DEFINE(HAVE_SYSINFO_PROCS)
+AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
 dnl Checks for library functions.
 AC_TYPE_SIGNAL
+AC_FUNC_GETLOADAVG
 AC_CHECK_FUNCS(socket strtod)
 
 
@@ -134,7 +215,7 @@ AC_SUBST(PGSQL_INCLUDE)
 
 if test "$have_db" != "yes"; then
 	echo "configure: No database selected! Use --with-XXX where XXX is your preferred database type";
-	echo "configure: Server processer (zabbix_suckerd and zabbix_trpper) will not be created !";
+	echo "configure: Server processes (zabbix_suckerd and zabbix_trpper) will not be created !";
 
 	SUBDIRS="src/zabbix_agent src/zabbix_sender"
 else
