@@ -1,11 +1,14 @@
 Changes for 1.0alpha10:
 
+ - table "Supported parameters by platform" added to manual.txt
+ - removed recommendation of PostgreSQL from manual.txt
+ - use of /proc was changed to native calls to sysinfo where possible
  - fixed double appearing of complex triggers in list of triggers
  - added form for changing host details
  - All calculations are made in C code instead of SQL statements
  - Housekeping now runs as separate process, however it's part of zabix_suckerd
  - "Not monitored" will not be displayed
- - Calls to mhash() changed to md5(), thus eliminating use of mhash module.
+ - Calls to mhash() changed to md5(), thus eliminating use of php4-mhash module.
  - Added missing line in zabbix_suckerd. Now it reads items.snmp_oid from DB.
 
 Changes for 1.0alpha9:
